tests/NormalTests/paczka1/fuzzy1/56117856.err
Error in line 1: d2wSn8rZo7J S355 93,7
Error in line 3: xQqhq8w8GE A17 0,6
Error in line 11: pOijBFy S229 282,50
Error in line 12: S0CDSg S229 12,3
Error in line 8: d2wSn8rZo7J A234 209,1
Error in line 5: pOijBFy S229 80,8
Error in line 13: S0CDSg A17 18,5
Error in line 21: S0CDSg S229 35,1
Error in line 23: S0CDSg A234 9,2
Error in line 31: xQqhq8w8GE S229 227,8
Error in line 30: d2wSn8rZo7J S355 70,1
Error in line 32: pOijBFy A17 64,2
